# case_chat

./: .env.example  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_SUMMARY.md  LOCAL_EMBEDDER_MIGRATION.md  Makefile  README.md  pyproject.toml  system_designs.md
agent-ui/: package.json  pnpm-lock.yaml  vitest.config.ts
agent-ui/src/: store.ts
agent-ui/src/api/: documents.ts
agent-ui/src/api/__tests__/: documents.test.ts
agent-ui/src/components/chat/ChatArea/: CitationLink.tsx  CitationPanel.tsx
agent-ui/src/components/chat/ChatArea/Messages/: ChatBlankState.tsx  MessageItem.tsx
agent-ui/src/components/chat/ChatArea/__tests__/: CitationLink.test.tsx  CitationPanel.test.tsx
agent-ui/src/components/chat/Sidebar/: Sidebar.tsx
agent-ui/src/components/chat/Sidebar/Documents/: DeleteDocumentModal.tsx  DocumentBlankState.tsx  DocumentItem.tsx  DocumentList.tsx  DocumentUploadModal.tsx
agent-ui/src/components/chat/Sidebar/Documents/__tests__/: DeleteDocumentModal.test.tsx  DocumentItem.test.tsx  DocumentList.test.tsx  DocumentUploadModal.test.tsx
agent-ui/src/components/chat/Sidebar/Sessions/: Sessions.tsx
agent-ui/src/components/ui/: drag-drop-zone.tsx  progress.tsx
agent-ui/src/components/ui/__tests__/: drag-drop-zone.test.tsx  progress.test.tsx
agent-ui/src/components/ui/icon/: constants.tsx
agent-ui/src/components/ui/tooltip/: index.ts
agent-ui/src/hooks/: useAIStreamHandler.tsx  useDocumentLoader.ts  useDocumentProgress.ts  useSessionLoader.tsx
agent-ui/src/hooks/__tests__/: useDocumentLoader.test.ts  useDocumentProgress.test.ts
agent-ui/src/store/__tests__/: document-store.test.ts
agent-ui/src/test/: setup.ts
agent-ui/src/types/: document-types.ts  os.ts
agent-ui/src/types/__tests__/: document-types.test.ts
case_assistant/: 01_session_lifecycle.md
case_assistant/system_design/: 01-chat-architecture.md  02-document-ingestion.md  03-message-routing.md  04-session-lifecycle.md  05-evaluation-strategy.md  06-core-components.md  07-ingestion-strategies-comparison.md  08-caching-strategies-discussion.md  09-user-stories.md  10-kubernetes-deployment.md  12-high-level-design.md  13-chunking-strategies.md  14-data-retention-and-governance.md  14a-questions-and-gaps.md  15-conversation-storage-analysis.md  16-conversation-storage-recommendation.md  17-conversation-search-decision-framework.md  README.md  db_for_conversation_history.md
docs/guides/: mlflow_security.md  mlflow_setup.md
examples/: __init__.py  case_chat_agentos_deploy.py
frontend/: README.md  documents.html  index.html
scripts/: dev-all-with-mlflow.sh  dev-all.sh  verify_mlflow_setup.py
src/case_chat/: __init__.py  config.py  main.py
src/case_chat/agents/: __init__.py  agent_factory.py  knowledge_base.py  session_manager.py  team_factory.py
src/case_chat/agents/tools/: document_search_tool.py  simple_search_tool.py
src/case_chat/api/: __init__.py  documents.py
src/case_chat/document_processing/: __init__.py  chunker.py  parser.py
src/case_chat/embeddings/: __init__.py  local_embedder.py
src/case_chat/observability/: __init__.py  mlflow_config.py  mlflow_tracing.py
src/case_chat/vector_store/: __init__.py  chroma_manager.py  models.py
src/case_chat/websocket/: __init__.py  models.py  progress_manager.py
tests/: test_app_settings.py  test_config.py  test_deployment.py  test_deployment_integration.py  test_integration.py  test_makefile.py  test_metrics_collection.py  test_precommit.py  test_session_manager.py  test_team_factory.py
tests/agents/: test_agent_factory.py  test_performance_metrics.py
tests/case_chat/: test_document_config.py
tests/case_chat/api/: test_documents.py
tests/case_chat/document_processing/: test_chunker.py  test_parser.py
tests/case_chat/embeddings/: test_glm5_embedder.py  test_local_embedder.py
tests/case_chat/observability/: __init__.py  test_deployment_mlflow.py  test_mlflow_config.py  test_mlflow_tracing.py
tests/case_chat/vector_store/: test_chroma_manager.py
